# tetrika-junior

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
task1/: solution.py
task2/: solution.py
task3/: solution.py
tests/test_task1/: test_strict_decorator.py
tests/test_task2/: test_format_count_to_csv.py
tests/test_task3/: test_appearance.py
